--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-google-pay",
-  "version": "2.1.0",
+  "name": "rn-google-pay",
+  "version": "1.0.0",
   "description": "React Native bridge for Google Pay",
   "main": "index.js",
   "scripts": {
@@ -15,12 +15,12 @@
     "payments",
     "pay"
   ],
-  "author": "Andrey Sorokin <sorokin0andrey@gmail.com> (https://github.com/sorokin0andrey)",
+  "author": "Ajil Jagadeesh <ajiljagadeesh7@gmail.com> (https://github.com/ajilJagadeesh7)",
   "license": "MIT",
   "nativePackage": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/busfor/react-native-google-pay.git"
+    "url": "https://github.com/AjilJagadeesh7/reactNative-google-pay.git"
   },
   "peerDependencies": {
     "react-native": ">=0.60.0"
