--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rn-google-pay",
+  "name": "rn-gpay",
   "version": "1.0.0",
   "description": "React Native bridge for Google Pay",
   "main": "index.js",
